@@ -1,10 +1,14 @@
 package net.corda.testing.node
 
+import net.corda.core.internal.deleteRecursively
 import net.corda.testing.common.internal.ProjectStructure.projectRootDir
 import net.corda.testing.node.internal.ProcessUtilities.startJavaProcess
+import net.corda.testing.node.internal.nodeJvmArgs
+import org.assertj.core.api.Assertions.assertThat
 import org.junit.Test
+import kotlin.io.path.Path
+import kotlin.io.path.createDirectories
 import kotlin.io.path.div
-import kotlin.test.assertEquals
 
 class MockNetworkIntegrationTests {
     companion object {
@@ -22,16 +26,16 @@ class MockNetworkIntegrationTests {
 	fun `does not leak non-daemon threads`() {
         val quasar = projectRootDir / "lib" / "quasar.jar"
         val quasarOptions = "m"
-        val moduleOpens = listOf(
-                "--add-opens", "java.base/java.time=ALL-UNNAMED", "--add-opens", "java.base/java.io=ALL-UNNAMED",
-                "--add-opens", "java.base/java.util=ALL-UNNAMED", "--add-opens", "java.base/java.net=ALL-UNNAMED",
-                "--add-opens", "java.base/java.nio=ALL-UNNAMED", "--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED",
-                "--add-opens", "java.base/java.security.cert=ALL-UNNAMED", "--add-opens", "java.base/javax.net.ssl=ALL-UNNAMED",
-                "--add-opens", "java.base/java.util.concurrent=ALL-UNNAMED", "--add-opens", "java.sql/java.sql=ALL-UNNAMED",
-                "--add-opens", "java.base/java.lang=ALL-UNNAMED"
-        )
 
-        assertEquals(0, startJavaProcess<MockNetworkIntegrationTests>(emptyList(),
-                extraJvmArguments = listOf("-javaagent:$quasar=$quasarOptions") + moduleOpens).waitFor())
+        val workingDirectory = Path("build", "MockNetworkIntegrationTests").apply {
+            deleteRecursively()
+            createDirectories()
+        }
+        val process = startJavaProcess<MockNetworkIntegrationTests>(
+                emptyList(),
+                workingDirectory = workingDirectory,
+                extraJvmArguments = listOf("-javaagent:$quasar=$quasarOptions") + nodeJvmArgs
+        )
+        assertThat(process.waitFor()).isZero()
     }
 }
